--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "measures",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {},
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "logform": "^2.4.0",
+    "morgan": "^1.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
     "react-router-dom": "5.3.0",
     "regenerator-runtime": "0.13.7",
+    "socket.io": "^4.4.1",
     "styled-components": "5.3.3",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "winston": "^3.6.0",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
     "@nrwl/cli": "13.8.4",
