--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "4.17.2",
     "logform": "^2.4.0",
     "morgan": "^1.10.0",
+    "nx": "^13.8.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
@@ -21,28 +22,28 @@
     "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
-    "@nrwl/cli": "13.8.4",
-    "@nrwl/cypress": "13.8.4",
-    "@nrwl/eslint-plugin-nx": "13.8.4",
-    "@nrwl/express": "^13.8.4",
-    "@nrwl/jest": "13.8.4",
-    "@nrwl/js": "13.8.4",
-    "@nrwl/linter": "13.8.4",
-    "@nrwl/node": "13.8.4",
-    "@nrwl/react": "^13.8.4",
-    "@nrwl/tao": "13.8.4",
-    "@nrwl/web": "13.8.4",
-    "@nrwl/workspace": "13.8.4",
-    "@testing-library/react": "12.1.2",
+    "@nrwl/cli": "13.8.8",
+    "@nrwl/cypress": "13.8.8",
+    "@nrwl/eslint-plugin-nx": "13.8.8",
+    "@nrwl/express": "13.8.8",
+    "@nrwl/jest": "13.8.8",
+    "@nrwl/js": "13.8.8",
+    "@nrwl/linter": "13.8.8",
+    "@nrwl/node": "13.8.8",
+    "@nrwl/react": "13.8.8",
+    "@nrwl/tao": "13.8.8",
+    "@nrwl/web": "13.8.8",
+    "@nrwl/workspace": "13.8.8",
+    "@testing-library/react": "12.1.4",
     "@testing-library/react-hooks": "7.0.2",
     "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
-    "@types/react-is": "17.0.2",
-    "@types/react-router-dom": "5.3.1",
-    "@types/styled-components": "5.1.15",
+    "@types/react": "17.0.40",
+    "@types/react-dom": "17.0.13",
+    "@types/react-is": "17.0.3",
+    "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.24",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
     "babel-jest": "27.2.3",
@@ -51,9 +52,9 @@
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react": "7.29.3",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
     "prettier": "^2.5.1",
@@ -62,3 +63,4 @@
     "typescript": "~4.5.2"
   }
 }
+
