--- a/packages/ui/project.json
+++ b/packages/ui/project.json
@@ -41,7 +41,8 @@
       "executor": "@nrwl/web:dev-server",
       "options": {
         "buildTarget": "ui:build",
-        "hmr": true
+        "hmr": true,
+        "proxyConfig": "packages/ui/proxy.conf.json"
       },
       "configurations": {
         "production": {
