--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "logform": "^2.4.0",
@@ -19,7 +20,8 @@
     "styled-components": "5.3.3",
     "tslib": "^2.0.0",
     "winston": "^3.6.0",
-    "winston-daily-rotate-file": "^4.6.1"
+    "winston-daily-rotate-file": "^4.6.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nrwl/cli": "13.8.8",
@@ -57,10 +59,11 @@
     "eslint-plugin-react": "7.29.3",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
+    "mockttp": "^3.0.0",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
+    "ts-mockito": "^2.6.1",
     "typescript": "~4.5.2"
   }
 }
-
