--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "test": "nx run-many --target=test --all"
+    "test": "nx run-many --target=test --all",
+    "coverage": "nx run-many --target=test --all --coverage"
   },
   "private": true,
   "dependencies": {
