--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "logform": "^2.4.0",
+    "luxon": "^2.4.0",
     "morgan": "^1.10.0",
     "nx": "^13.8.8",
     "react": "17.0.2",
