--- a/packages/api/src/default.config.json
+++ b/packages/api/src/default.config.json
@@ -1,51 +1,60 @@
 {
-    "http-port" : 3300,
-    "database" : {
-        "type": "postgres",
-        "config": {
-            "user": "postgres",
-            "password": "very.secret",
-            "host": "my.host.org",
-            "port": 5432,
-            "database": "postgres"
-        }
+  "http-port": 3300,
+  "database": {
+    "type": "postgres",
+    "config": {
+      "user": "postgres",
+      "password": "very.secret",
+      "host": "my.host.org",
+      "port": 5432,
+      "database": "postgres"
+    }
+  },
+  "sensors": [
+    {
+      "id": "my-sensor-id",
+      "type": "1wire",
+      "config": {
+        "path": "/sys/bus/w1/devices/28-0414606b95ff/w1_slave"
+      }
     },
-    "sensors" : [
-        { 
-          "id": "my-sensor-id",
-          "type" : "1wire",
-          "config" : {
-            "path": "/sys/bus/w1/devices/28-0414606b95ff/w1_slave"
-          } 
-        },
-        { 
-          "id": "my-other-sensor-id",
-          "type" : "tcw122",
-          "config" : {
-            "host": "192.168.0.22",
-            "user": "foo",
-            "password": "bar",
-            "path": "qux"
-          } 
-        }
-      ],
-    "measures": [
-      {
-        "id": "interior",
-        "sensor-id": "my-sensor-id",
-        "sensor-key": "Temperature2",
-        "recording": {
-          "mode": "manual"
-        }
-      },
-      {
-        "id": "exterior",
-        "sensor-id" : "my-other-sensor-id",
-        "recording": {
-          "mode": "periodic",
-          "auto-start": "true",
-          "period": "PT1M"
-        }
-      } 
-    ]
+    {
+      "id": "my-other-sensor-id",
+      "type": "tcw122",
+      "config": {
+        "host": "192.168.0.22",
+        "user": "foo",
+        "password": "bar",
+        "path": "qux"
+      }
+    }
+  ],
+  "measurements": [
+    {
+      "id": "interior",
+      "sensor-id": "my-sensor-id",
+      "sensor-key": "Temperature2"
+    },
+    {
+      "id": "exterior",
+      "sensor-id": "my-other-sensor-id",
+      "sensor-key": "Temperature1"
+    }
+  ],
+  "recorders": [
+    {
+      "id": "interior-recorder",
+      "measurement-id": "interior",
+      "mode": "manual"
+    },
+    {
+      "id": "interior-recorder",
+      "measurement-id": "exterior",
+      "mode": "periodic",
+      "config" : {
+        "auto-start": true,
+        "period": "PT1M"
+      }
+    }
+  ]
 }
