--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "knex": "^2.1.0",
     "logform": "^2.4.0",
     "luxon": "^2.4.0",
     "morgan": "^1.10.0",
