--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "async-mutex": "^0.3.2",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
@@ -22,6 +23,7 @@
     "react-router-dom": "5.3.0",
     "regenerator-runtime": "0.13.7",
     "socket.io": "^4.4.1",
+    "sqlite3": "^5.0.8",
     "styled-components": "5.3.3",
     "tslib": "^2.0.0",
     "winston": "^3.6.0",
