--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
   - 16
+
+addons:
+  sonarcloud:
+    organization: "hirle-github"
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - npx nx run-many --target=test --all --coverage
