--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,12 @@
 sonar.projectKey=hirle_measures
 sonar.projectName=Measures
+sonar.organization=hirle-github
 
 sonar.sources=packages/**/src
-sonar.exclusions=packages/**/src/**/tests/**/*.test.tsx?
 
 sonar.tests=packages/**/src/**/tests
-sonar.test.inclusions=packages/src/**/tests/**/*.test.tsx?
 
 sonar.links.ci=https://travis-ci.com/github/hirle/measures
 
-sonar.javascript.lcov.reportPaths=packages/*/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/packages/*/lcov.info
 sonar.javascript.exclusions=**/jest.config.js
