Fix sonarcloud analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,9 +2,9 @@ sonar.projectKey=hirle_measures
 sonar.projectName=Measures
 sonar.organization=hirle-github
 
-sonar.sources=packages/**/src
+sonar.sources=packages/**/src/**/*.tsx?
 
-sonar.tests=packages/**/src/**/tests
+sonar.tests=packages/*/src/**/tests/*.test.tsx?
 
 sonar.links.ci=https://travis-ci.com/github/hirle/measures
 
