--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=hirle_measures
 sonar.projectName=Measures
 sonar.organization=hirle-github
 
-sonar.sources=packages/**/src/**/*.tsx?
+sonar.sources=packages/api/src,packages/ui/src,packages/ui-e2e/src,packages/restapiinterface/src
 
 sonar.links.ci=https://travis-ci.com/github/hirle/measures
 
