--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "@types/semver": "^7.3.10",
     "async-mutex": "^0.3.2",
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
@@ -22,6 +23,7 @@
     "react-is": "17.0.2",
     "react-router-dom": "5.3.0",
     "regenerator-runtime": "0.13.7",
+    "semver": "^7.3.7",
     "socket.io": "^4.4.1",
     "sqlite3": "^5.0.8",
     "styled-components": "5.3.3",
