--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react": "7.29.3",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
+    "mock-http-server": "^1.4.5",
     "mockttp": "^3.0.0",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
