--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "measures",
   "version": "0.0.1",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "test": "nx run-many --target=test --all",
+    "coverage": "nx run-many --target=test --all --coverage"
+  },
   "private": true,
   "dependencies": {
+    "@types/semver": "^7.3.10",
+    "async-mutex": "^0.3.2",
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "knex": "^2.1.0",
     "logform": "^2.4.0",
+    "luxon": "^2.4.0",
     "morgan": "^1.10.0",
     "nx": "^13.8.8",
     "react": "17.0.2",
@@ -15,11 +23,14 @@
     "react-is": "17.0.2",
     "react-router-dom": "5.3.0",
     "regenerator-runtime": "0.13.7",
+    "semver": "^7.3.7",
     "socket.io": "^4.4.1",
+    "sqlite3": "^5.0.8",
     "styled-components": "5.3.3",
     "tslib": "^2.0.0",
     "winston": "^3.6.0",
-    "winston-daily-rotate-file": "^4.6.1"
+    "winston-daily-rotate-file": "^4.6.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nrwl/cli": "13.8.8",
@@ -57,10 +68,11 @@
     "eslint-plugin-react": "7.29.3",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.2.3",
+    "mockttp": "^3.0.0",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
+    "ts-mockito": "^2.6.1",
     "typescript": "~4.5.2"
   }
 }
-
