--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "knex": "^2.1.0",
-    "logform": "^2.4.0",
+    "log4js": "^6.6.1",
     "luxon": "^2.4.0",
-    "morgan": "^1.10.0",
     "nx": "^13.8.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -28,8 +27,6 @@
     "sqlite3": "^5.0.8",
     "styled-components": "5.3.3",
     "tslib": "^2.0.0",
-    "winston": "^3.6.0",
-    "winston-daily-rotate-file": "^4.6.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
