--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "mockttp": "^3.0.0",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
+    "temp-file": "^3.4.0",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   }
