Implement log file

--- a/packages/api/src/default.config.json
+++ b/packages/api/src/default.config.json
@@ -1,59 +1,41 @@
 {
   "http-port": 3300,
   "database": {
-    "type": "postgres",
+    "type": "sqlite",
     "config": {
-      "user": "postgres",
-      "password": "very.secret",
-      "host": "my.host.org",
-      "port": 5432,
-      "database": "postgres"
+      "filename": ":memory:"
     }
   },
   "sensors": [
     {
-      "id": "my-sensor-id",
-      "type": "1wire",
-      "config": {
-        "path": "/sys/bus/w1/devices/28-0414606b95ff/w1_slave"
-      }
-    },
-    {
-      "id": "my-other-sensor-id",
+      "id": "teracom-demo",
       "type": "tcw122",
       "config": {
-        "url": "http://192.168.0.22",
-        "user": "foo",
-        "password": "bar"
+        "url": "http://212.25.45.120:60085/",
+        "user": "admin",
+        "password": "admin"
       }
     }
   ],
   "measurements": [
     {
-      "id": "interior",
-      "sensor-id": "my-sensor-id",
-      "sensor-key": "Temperature2"
-    },
-    {
-      "id": "exterior",
-      "sensor-id": "my-other-sensor-id",
+      "id": "teracom-demo-temperature",
+      "sensor-id": "teracom-demo",
       "sensor-key": "Temperature1"
     }
   ],
   "recorders": [
     {
-      "id": "interior-recorder",
-      "measurement-id": "interior",
-      "mode": "manual"
-    },
-    {
-      "id": "interior-recorder",
-      "measurement-id": "exterior",
+      "id": "teracom-demo-temperature-recorder",
+      "measurement-id": "teracom-demo-temperature",
       "mode": "periodic",
       "config" : {
-        "auto-start": true,
         "period": "PT1M"
       }
     }
-  ]
+  ],
+  "logs":{
+    "dir": "./logs",
+    "retention": 7
+  }
 }
